.direnv/gomodcache/github.com/tree-sitter/tree-sitter-c@v0.23.4/test/corpus/crlf.txt
============================================
Line comments with escaped CRLF line endings
============================================

// hello \
   this is still a comment
this_is_not a_comment;

---

(translation_unit
  (comment)
  (declaration (type_identifier) (identifier)))
